--- a/Web.config
+++ b/Web.config
@@ -3,6 +3,11 @@
 	<connectionStrings>
 		<add name="TeamsConnectionString" connectionString="Provider=Microsoft.ACE.OLEDB.12.0;Data Source=|DataDirectory|\Teams.accdb" providerName="System.Data.OleDb" />
 	</connectionStrings>
+	
+	<appSettings>
+		<add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
+	</appSettings>
+	
 	<!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
 
