no signup and no images only

--- a/NEWSITEPROJECT.csproj
+++ b/NEWSITEPROJECT.csproj
@@ -88,17 +88,22 @@
     <Content Include="App_Data\Teams.xml" />
     <Content Include="App_Data\Users.xml" />
     <Content Include="BeitarJerusalem.aspx" />
+    <Content Include="beitarrjerusalem.png" />
     <Content Include="bin\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.dll" />
     <Content Include="bin\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.xml" />
     <Content Include="Default.aspx" />
     <Content Include="Global.asax" />
     <Content Include="HapoelPetahTikva.aspx" />
+    <Content Include="hapoelpetahtikva.jpeg" />
     <Content Include="HapoelTelAviv.aspx" />
+    <Content Include="hapoelTelvaviv.png" />
     <Content Include="Images\beitarrjerusalem.png" />
     <Content Include="Images\hapoelPetahTikva.png" />
     <Content Include="Images\hapoelTelvaviv.png" />
     <Content Include="Images\maccabiHaifa.png" />
     <Content Include="Images\schoolLogo.png" />
+    <Content Include="macabiHJaifa.jpeg" />
+    <Content Include="macabitelavvilogo.jpeg" />
     <Content Include="MasterPage.master" />
     <Content Include="MaccabiHaifa.aspx" />
     <Content Include="packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1\lib\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.dll" />
@@ -160,6 +165,7 @@
     <Content Include="packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1\tools\RoslynLatest\System.Xml.XPath.XDocument.dll" />
     <Content Include="packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1\tools\RoslynLatest\vbc.exe" />
     <Content Include="packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1\tools\RoslynLatest\VBCSCompiler.exe" />
+    <Content Include="schoolLogo.png" />
     <Content Include="Signin.aspx" />
     <Content Include="SignUp.aspx" />
     <Content Include="sitemap.aspx" />
@@ -238,6 +244,7 @@
     <Content Include="bundle.config" />
     <Content Include="obj\Debug\DesignTimeResolveAssemblyReferencesInput.cache" />
     <Content Include="obj\Debug\NEWSITEPROJECT.csproj.AssemblyReference.cache" />
+    <Content Include="Global.asax.bak" />
     <None Include="packages.config" />
     <Content Include="packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1\build\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.Extensions.props" />
     <Content Include="packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1\build\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props" />
